--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <nav>
       <ul>
         <li><a href="#home">Home</a></li>
+        <li><a href="admin.html">Admin Login</a></li>
         <li><a href="#shop">Shop</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#blog">Blog</a></li>
