--- a/admin.html
+++ b/admin.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Admin Panel - Retro Rocket</title>
   <link rel="stylesheet" href="styles.css" />
-  <script defer src="admin.js"></script>
+  <script type="module" src="admin_firebase.js"></script>
+
 </head>
 <body>
   <section id="admin-login">
