--- a/admin.html
+++ b/admin.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Admin Panel - Retro Rocket</title>
   <link rel="stylesheet" href="styles.css" />
-  <script type="module" src="admin_firebase.js"></script>
-
+  <script defer src="admin.js"></script>
 </head>
 <body>
   <section id="admin-login">
