--- a/index.html
+++ b/index.html
@@ -1,93 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Retro Rocket Store</title>
-  <link rel="stylesheet" href="styles.css" />
-  <script defer src="script.js"></script>
-</head>
-<body>
-  <header class="site-header">
-    <img src="assets/logo.png" alt="Retro Rocket Logo" class="logo" />
-    <nav>
-      <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#shop">Shop</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#blog">Blog</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="#cart">Cart (<span id="cart-count">0</span>)</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <section id="home" class="hero">
-    <h1>Welcome to Retro Rocket!</h1>
-    <p>Your one-stop shop for 3D toys, anime gear, posters, vintage clothes, and snacks.</p>
-  </section>
-
-  <section id="shop" class="products">
-    <h2>Shop Categories</h2>
-    <div class="category-grid">
-      <a href="#" class="category">3D Printed Toys</a>
-      <a href="#" class="category">Thrifted Clothes</a>
-      <a href="#" class="category">Sublimation Posters</a>
-      <a href="#" class="category">Anime/Manga Toys</a>
-      <a href="#" class="category">Food</a>
-    </div>
-
-    <div class="product-list">
-      <div class="product-card">
-        <img src="assets/product1.jpg" alt="3D Rocket Toy">
-        <h3>3D Rocket Toy</h3>
-        <p>$12.99</p>
-        <button onclick="addToCart('3D Rocket Toy', 12.99)">Add to Cart</button>
-      </div>
-      <div class="product-card">
-        <img src="assets/product2.jpg" alt="Vintage Denim Jacket">
-        <h3>Vintage Denim Jacket</h3>
-        <p>$29.99</p>
-        <button onclick="addToCart('Vintage Denim Jacket', 29.99)">Add to Cart</button>
-      </div>
-      <div class="product-card">
-        <img src="assets/product3.jpg" alt="Sublimation Poster - Space Monkey">
-        <h3>Space Monkey Poster</h3>
-        <p>$9.99</p>
-        <button onclick="addToCart('Space Monkey Poster', 9.99)">Add to Cart</button>
-      </div>
-    </div>
-  </section>
-
-  <section id="about">
-    <h2>About Us</h2>
-    <p>Retro Rocket is a passion project built for lovers of unique, nostalgic, and geeky stuff.</p>
-  </section>
-
-  <section id="blog">
-    <h2>News & Blog</h2>
-    <p>Coming soon: behind-the-scenes looks, featured toys, and geek lifestyle posts.</p>
-  </section>
-
-  <section id="contact">
-    <h2>Contact Us</h2>
-    <form id="contact-form">
-      <input type="text" placeholder="Your Name" required />
-      <input type="email" placeholder="Your Email" required />
-      <textarea placeholder="Your Message"></textarea>
-      <button type="submit">Send</button>
-    </form>
-  </section>
-
-  <section id="cart">
-    <h2>Your Cart</h2>
-    <ul id="cart-items"></ul>
-    <p>Total: $<span id="cart-total">0.00</span></p>
-    <button onclick="checkout()">Checkout</button>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 Retro Rocket Store. Designed with 💾 and 🚀.</p>
-  </footer>
-</body>
-</html>
+<!DOCTYPE html><html><head><title>Retro Rocket Store</title></head><body>Retro Rocket Store</body></html>
